--- a/eg_media_starter-main/css/nocom.css
+++ b/eg_media_starter-main/css/nocom.css
@@ -54,6 +54,18 @@ a#trigram::before {
   right: 0; 
 }
 
+.slideshow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+
+
+
+
+
 @media screen and (max-width: 990px) {
   .nav-wrap {
     display:none;
@@ -97,6 +109,14 @@ main {
   color: var(--dkmid); 
   position: relative; 
 }
+.controls {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+}
 .controls button { 
   cursor: pointer; 
   position: absolute; 
@@ -121,20 +141,8 @@ main {
 .slideshow h2 { 
   font-size: 4rem; 
 }
-.hero {
-  padding: 4rem 0; 
-  display: flex; 
-  flex-direction: column; 
-  justify-content: center; 
-  align-items: center; 
-  background-color: var(--ltmid); 
-  width: 100vw; 
-  margin: 2rem 0 1rem -2rem; 
-}
-.hero > * { 
-  margin: 0; 
-  padding: 0; 
-}
+
+
 .grid-cont { 
   padding: 2rem 0; 
   display: grid; 
@@ -160,12 +168,13 @@ main {
   border-radius: 8px;
   background-color: var(--dark); 
   color:white;
-}
+} 
 .card img { 
   width: 100%; 
   height: auto; 
   max-height: 320px; 
   border-radius: 8px 8px 0 0; 
+  
 }
 .card button { 
   width: 30%; 
@@ -174,6 +183,127 @@ main {
   padding: 1rem 2rem; 
   cursor: pointer; 
 }
+.card:hover {
+  background-color: transparent;
+  border-color: var(--dark);
+  border-style: solid;
+}
+.card:hover .open-modal {
+  background-color: var(--light);
+}
+.open-modal {
+  width: 42%;
+  min-width: 6rem;
+  margin: 2rem auto;
+  padding: 1rem 2rem;
+  cursor: pointer;
+  color: var(--dark);
+  font-weight: 500;
+  transition: all .2s ease-in-out;
+  background-color: var(--dkmid);
+  border-radius: 2px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-transform: uppercase;
+}
+.open-modal:hover {
+  color: var(--dark);
+  border: 2px dashed var(--dark);
+}
+.card:hover .open-modal:hover {
+  background-color: transparent;
+  border-style: solid;
+}
+.open-modal svg {
+  fill: none;
+  width: 1.5em;
+  height: 1.5em;
+}
+.open-modal:hover svg {
+  animation-name: bounce;
+  transform-origin: center bottom;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+@keyframes bounce {
+  0%, 20%, 53%, 80%, 100% {
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transform: translate3d(0,0,0);
+  }
+  40%, 43% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -.5rem, 0);
+  }
+  70% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -.25rem, 0);
+  }
+  90% {
+    transform: translate3d(0,-.1rem,0);
+  }
+  
+}
+#modal-wrap {
+  display: none;
+  position: fixed;
+  z-index: 12;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(30,30,30,0.95);
+}
+#modal-wrap.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5%;
+}
+#modal-wrap.show .card-content {
+  position: relative;
+  width: 120rem;
+  margin: auto;
+  background-color: var(--light);
+  color: var(--dark);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0 2%;
+  border: 2px solid var(--light);
+  animation: fadein .3s ease-in-out;
+}
+#modal-wrap.show .card-content p {
+  -webkit-line-clamp: none;
+}
+#modal-wrap.show .card-content p:not(:first-of-type) {
+  display: inherit;
+}
+@keyframes fadein {
+  from{transform:scale(.1);} /*-- modal grows from very small to full size--*/
+}
+article .close {
+  display: none;
+}
+.close {
+  position: absolute;
+  top: .5rem;
+  right: .5rem;
+}
+.close-btn {
+  font-size: 2.5rem;
+  cursor: pointer;
+  background-color: rgba(255,255,255,0.8);
+  border: 2px solid var(--dark);
+  border-radius: 100%;
+  padding: 0rem .8rem .37rem .8rem;
+  transition: all .2s ease-in-out;
+}
+.close-btn:hover {
+  background-color: var(--accent);
+  color: var(--light);
+  border-color: var(--accent);
+}
+
 footer { 
   margin-top: 2rem; 
   background-color: var(--dark); 
@@ -189,3 +319,21 @@ footer p {
   text-align: center; 
   font-weight: 500; 
 }
+@media screen and (min-width: 768px) {
+  .grid-cont {grid-template-columns: repeat(2, 1fr);}
+}
+@media screen and (min-width: 990px) {
+  .grid-cont {grid-template-columns: repeat(2, 1fr);}
+  .controls button {top: 40%;}
+}
+@media screen and (min-width: 1280px) {
+  .grid-cont {grid-template-columns: repeat(3, 1fr);}
+  #modal-wrap.show .card-content {grid-template-columns: 1fr 1fr;}
+  .close {grid-column: auto; justify-self: end;}
+  #modal-wrap.show .card-content h4 {margin-top: 4rem;}
+}
+@media screen and (min-width: 1440px) {
+  .grid-cont {grid-template-columns: repeat(4, 1fr);}
+}
+
+
