--- a/css/nocom.css
+++ b/css/nocom.css
@@ -1,9 +1,10 @@
 :root {
-  --dark: #444;
+  --dark: rgb(60,60,60);
   --ltmid: #DDD;
   --dkmid: #999;
   --light: #F9F9F9;
   --accent: #6495ed;
+
 }
 body {
   color: var(--dark); 
@@ -16,10 +17,9 @@ a:hover {color: var(--accent);}
 a:active {color: var(--dkmid);}
 
 header.top-nav { 
-  background-color: var(--ltmid); 
+  background-color: var(--dark); 
   padding: 1rem 2rem 1rem 0; 
   display: flex; 
-  min-height: 8rem; 
   justify-content: space-between; 
   align-items: center; 
   position: relative; 
@@ -31,7 +31,7 @@ nav {
 }
 a.nav-link { 
   padding-left: 2.8rem; 
-  color: var(--dark); 
+  color: var(--light); 
   font-weight: 500; 
   text-decoration: none; 
   transition: all .2s ease-in-out; 
@@ -54,11 +54,22 @@ a#trigram::before {
   right: 0; 
 }
 
+.slideshow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+
+
+
+
+
 @media screen and (max-width: 990px) {
   .nav-wrap {
     display:none;
   }
-}
 .nav-wrap.mobile {
   position: absolute;
   z-index: 10;
@@ -82,6 +93,7 @@ a#trigram::before {
   .nav-wrap.mobile a:hover {
     background-color: var(--light);
 }
+}
 
 main {
   padding: 1rem 2rem; 
@@ -90,12 +102,18 @@ main {
   display: flex; 
   justify-content: center; 
   align-items: center; 
-  height: 55rem; 
-  border: 2px dashed var(--dkmid); 
-  border-radius: 8px; 
-  background-color: var(--light); 
+  border: 2px var(--dkmid); 
+  border-radius: 8px;  
   color: var(--dkmid); 
   position: relative; 
+}
+.controls {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  align-items: center;
 }
 .controls button { 
   cursor: pointer; 
@@ -121,20 +139,35 @@ main {
 .slideshow h2 { 
   font-size: 4rem; 
 }
-.hero {
-  padding: 4rem 0; 
-  display: flex; 
-  flex-direction: column; 
-  justify-content: center; 
-  align-items: center; 
-  background-color: var(--ltmid); 
-  width: 100vw; 
-  margin: 2rem 0 1rem -2rem; 
+.slides {
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
-.hero > * { 
-  margin: 0; 
-  padding: 0; 
+.slides {
+  display:inline-flex;
 }
+.slides img {
+  padding: 0;
+  width:inherit
+}
+.thumbs {
+  display: flex;
+  gap: 1rem;
+}
+.thumbs img {
+  opacity: .5;
+  cursor: pointer;
+  transition: all .25s ease-in-out;
+  border: 2px dotted transparent;
+}
+.thumbs img:hover, img.active {
+  opacity: 1;
+}
+img.active {
+  border: 2px dotted var(--accent);
+}
+
 .grid-cont { 
   padding: 2rem 0; 
   display: grid; 
@@ -157,15 +190,16 @@ main {
   padding: 2%; 
   display: flex; 
   flex-direction: column; 
-  border-radius: 8px; 
-  border: 2px dashed var(--dkmid); 
-  background-color: var(--light); 
-}
+  border-radius: 8px;
+  background-color: var(--dark); 
+  color:white;
+} 
 .card img { 
   width: 100%; 
   height: auto; 
   max-height: 320px; 
   border-radius: 8px 8px 0 0; 
+  
 }
 .card button { 
   width: 30%; 
@@ -174,9 +208,131 @@ main {
   padding: 1rem 2rem; 
   cursor: pointer; 
 }
+.card:hover {
+  background-color: transparent;
+  border-color: var(--dark);
+  border-style: solid;
+}
+.card:hover .open-modal {
+  background-color: var(--light);
+}
+.open-modal {
+  width: 42%;
+  min-width: 6rem;
+  margin: 2rem auto;
+  padding: 1rem 2rem;
+  cursor: pointer;
+  color: var(--dark);
+  font-weight: 500;
+  transition: all .2s ease-in-out;
+  background-color: var(--dkmid);
+  border-radius: 2px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-transform: uppercase;
+}
+.open-modal:hover {
+  color: var(--dark);
+  border: 2px dashed var(--dark);
+}
+.card:hover .open-modal:hover {
+  background-color: transparent;
+  border-style: solid;
+}
+.open-modal svg {
+  fill: none;
+  width: 1.5em;
+  height: 1.5em;
+}
+.open-modal:hover svg {
+  animation-name: bounce;
+  transform-origin: center bottom;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+@keyframes bounce {
+  0%, 20%, 53%, 80%, 100% {
+    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transform: translate3d(0,0,0);
+  }
+  40%, 43% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -.5rem, 0);
+  }
+  70% {
+    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -.25rem, 0);
+  }
+  90% {
+    transform: translate3d(0,-.1rem,0);
+  }
+  
+}
+#modal-wrap {
+  display: none;
+  position: fixed;
+  z-index: 12;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(30,30,30,0.95);
+}
+#modal-wrap.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5%;
+}
+#modal-wrap.show .card-content {
+  position: relative;
+  width: 120rem;
+  margin: auto;
+  background-color: var(--light);
+  color: var(--dark);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0 2%;
+  border: 2px solid var(--light);
+  animation: fadein .3s ease-in-out;
+}
+#modal-wrap.show .card-content p {
+  -webkit-line-clamp: none;
+}
+#modal-wrap.show .card-content p:not(:first-of-type) {
+  display: inherit;
+}
+@keyframes fadein {
+  from{transform:scale(.1);} /*-- modal grows from very small to full size--*/
+}
+article .close {
+  display: none;
+}
+.close {
+  position: absolute;
+  top: .5rem;
+  right: .5rem;
+}
+.close-btn {
+  font-size: 2.5rem;
+  cursor: pointer;
+  background-color: rgba(255,255,255,0.8);
+  border: 2px solid var(--dark);
+  border-radius: 100%;
+  padding: 0rem .8rem .37rem .8rem;
+  transition: all .2s ease-in-out;
+}
+.close-btn:hover {
+  background-color: var(--accent);
+  color: var(--light);
+  border-color: var(--accent);
+}
+
 footer { 
   margin-top: 2rem; 
-  background-color: var(--ltmid); 
+  background-color: var(--dark); 
+  color:white;
   padding: 1rem 2rem; 
   display: flex; 
   height: 6rem; 
@@ -188,3 +344,21 @@ footer p {
   text-align: center; 
   font-weight: 500; 
 }
+@media screen and (min-width: 768px) {
+  .grid-cont {grid-template-columns: repeat(2, 1fr);}
+}
+@media screen and (min-width: 990px) {
+  .grid-cont {grid-template-columns: repeat(2, 1fr);}
+  .controls button {top: 40%;}
+}
+@media screen and (min-width: 1280px) {
+  .grid-cont {grid-template-columns: repeat(3, 1fr);}
+  #modal-wrap.show .card-content {grid-template-columns: 1fr 1fr;}
+  .close {grid-column: auto; justify-self: end;}
+  #modal-wrap.show .card-content h4 {margin-top: 4rem;}
+}
+@media screen and (min-width: 1440px) {
+  .grid-cont {grid-template-columns: repeat(4, 1fr);}
+}
+
+
