--- a/css/nocom.css
+++ b/css/nocom.css
@@ -3,7 +3,7 @@
   --ltmid: #DDD;
   --dkmid: #999;
   --light: #F9F9F9;
-  --accent: #6495ed;
+  --accent: #ff7788;
 
 }
 body {
@@ -44,7 +44,7 @@ a.nav-link.logo {
   font-weight: 900; 
 }
 a#trigram { 
-   display:inherit;
+   display:none;
 }
 a#trigram::before { 
   content: '\2630'; 
@@ -61,15 +61,25 @@ a#trigram::before {
   position: relative;
 }
 
-
-
-
+.caption-wrap{
+position: absolute;
+text-align: center;
+width: 100%;
+bottom: 2%;
+background-color: rgba(0,0,0,50%);
+color:white;
+}
 
 
 @media screen and (max-width: 990px) {
   .nav-wrap {
     display:none;
   }
+
+  a#trigram { 
+    display:inherit;
+ }
+
 .nav-wrap.mobile {
   position: absolute;
   z-index: 10;
@@ -107,6 +117,7 @@ main {
   color: var(--dkmid); 
   position: relative; 
 }
+
 .controls {
   height: 100%;
   width: 100%;
@@ -143,29 +154,31 @@ main {
   width: 100%;
   padding: 0;
   margin: 0;
+  display: inline-flex;
 }
-.slides {
-  display:inline-flex;
-}
+
 .slides img {
   padding: 0;
   width:inherit
 }
 .thumbs {
-  display: flex;
-  gap: 1rem;
+  display:inline-block;
+  gap: 0.2rem;
+  padding-top: 1rem;
+  width: 100%;
+  margin: 0 auto;
 }
 .thumbs img {
   opacity: .5;
   cursor: pointer;
   transition: all .25s ease-in-out;
-  border: 2px dotted transparent;
+  border: 2px solid;
 }
 .thumbs img:hover, img.active {
   opacity: 1;
 }
 img.active {
-  border: 2px dotted var(--accent);
+  border: 2px solid var(--accent);
 }
 
 .grid-cont { 
@@ -275,7 +288,7 @@ img.active {
   z-index: 12;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 90%;
   height: 100%;
   background: rgba(30,30,30,0.95);
 }
